--- a/templates/base.html
+++ b/templates/base.html
@@ -26,5 +26,31 @@
         {% block content %}
         {% endblock %}
     </div>
+    <div class="text-center bg-dark py-3 mt-auto">
+        <p class="mb-0 text-white">&copy; 2025 SmartBizManager. All rights reserved.</p>
+        <small class="d-block mt-1 text-white-50">
+            Developed with ❤️ by <strong>
+                <a href="https://www.github.com/mirzazaryab" class="text-white text-decoration-underline" target="_blank">
+                    Mirza Zaryab
+                </a>
+            </strong>
+        </small>
+    </div>
 </body>
 </html>
+    <style>
+    html, body {
+        height: 100%;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container {
+        flex: 1;
+    }
+
+    footer, .footer {
+        margin-top: auto;
+    }
+</style>
